@@ -1,3 +1,4 @@
+1963 [Update] removed treeview on the left side so that the update data itself is better visible
 1962 [Update] only the files which need an update are shown. if no file needs an update all files are shown.
      [Update] added a checkbox to show all files
 1961 [AVS Cutter] update start/end frame when a section is clicked. Feature request #1660341
